--- a/examples/15_9_F_15_A_2008_12_17_phase_blocks.md
+++ b/examples/15_9_F_15_A_2008_12_17_phase_blocks.md
@@ -1,6 +1,10 @@
 # Phase Blocks (Consecutive Event Grouping)
 
 - Source: 15_9_F_15_A_2008_12_17_events_classified.jsonl
+- Wellbore: 15/9-F-15 A
+- Report date: 2008-12-17
+- Header period: 2008-12-16 to 2008-12-17
+- Time validation: PASS (total=24.00h, gaps=0, overlaps=0)
 
 - Phase 1 | **DRILLING** | 00:00–02:30 | 2.50 h
 - Phase 2 | **TRIP** | 02:30–09:15 | 6.75 h
